--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     padding: 6px 12px;
     border-radius: 4px;
     font-size: 16px;
-    background-color: hsl(hue, saturation, lightness);
-    border: 3px hsl(hue, saturation, lightness);
+    background-color:rgb(255, 136, 0);
+    border: 3px;
+    color: white;
 }
